[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menus/HUD/Hud.gd" type="Script" id=1]
[ext_resource path="res://Menus/HUD/reloadfinal.png" type="Texture" id=2]
[ext_resource path="res://Menus/HUD/reloadPressed.png" type="Texture" id=3]
[ext_resource path="res://Menus/HUD/fistfinal.png" type="Texture" id=4]
[ext_resource path="res://Menus/HUD/scope3.png" type="Texture" id=5]
[ext_resource path="res://Menus/HUD/grenedefinal.png" type="Texture" id=6]
[ext_resource path="res://font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Menus/HUD/pause3.png" type="Texture" id=8]

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="reload" type="TextureButton" parent="."]
margin_left = 1170.91
margin_top = 315.475
margin_right = 1261.91
margin_bottom = 394.475
rect_rotation = -1.35874
shortcut_in_tooltip = false
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="melee" type="TextureButton" parent="."]
margin_left = 1169.13
margin_top = 400.091
margin_right = 1284.13
margin_bottom = 506.091
rect_rotation = 11.8325
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )
expand = true

[node name="zoom" type="TextureButton" parent="."]
margin_left = 1167.07
margin_top = 102.624
margin_right = 1247.07
margin_bottom = 173.624
shortcut_in_tooltip = false
texture_normal = ExtResource( 5 )
expand = true

[node name="HE" type="TextureButton" parent="."]
margin_left = 1170.41
margin_top = 188.393
margin_right = 1269.41
margin_bottom = 272.393
rect_rotation = 8.39806
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
expand = true

[node name="Panel" type="Panel" parent="."]
margin_left = 1145.32
margin_top = 15.2277
margin_right = 1238.31
margin_bottom = 59.2278
__meta__ = {
"_edit_group_": true
}

[node name="ammo" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.5
margin_top = -10.2277
margin_right = 26.5
margin_bottom = 13.7723
custom_fonts/font = ExtResource( 7 )
text = "20|30"

[node name="pause" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -604.763
margin_top = 18.505
margin_right = -546.763
margin_bottom = 72.505
texture_normal = ExtResource( 8 )
expand = true

[node name="GridContainer" type="GridContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 317.748
margin_top = 43.0474
margin_right = 593.748
margin_bottom = 355.047
rect_scale = Vector2( 1.25, 1.25 )
columns = 3

[node name="1" type="Label" parent="GridContainer"]
margin_right = 113.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
text = "Player          "

[node name="2" type="Label" parent="GridContainer"]
margin_left = 117.0
margin_right = 202.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
text = "kills         "

[node name="3" type="Label" parent="GridContainer"]
margin_left = 206.0
margin_right = 276.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
text = "Deaths"

[node name="Panel2" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.0
margin_top = -209.0
margin_right = 198.0
margin_bottom = 209.0

[node name="score" type="Button" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.966
margin_top = -110.624
margin_right = 53.0347
margin_bottom = -68.6242
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 7 )
text = "Score Board"

[node name="quit" type="Button" parent="Panel2"]
margin_left = 84.8913
margin_top = 239.079
margin_right = 249.891
margin_bottom = 281.079
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 7 )
text = "QUIT"

[node name="Tween" type="Tween" parent="."]

[node name="respawn" type="ProgressBar" parent="."]
visible = false
margin_left = 434.0
margin_top = 445.0
margin_right = 633.0
margin_bottom = 476.0
custom_fonts/font = ExtResource( 7 )

[node name="Label" type="Label" parent="respawn"]
margin_left = -176.127
margin_top = 2.21606
margin_right = -30.1271
margin_bottom = 36.2161
custom_fonts/font = ExtResource( 7 )
text = "Respawning"
[connection signal="pressed" from="reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="zoom" to="." method="_on_zoom_pressed"]
[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Panel2/score" to="." method="_on_score_pressed"]
[connection signal="pressed" from="Panel2/quit" to="." method="_on_quit_pressed"]
